# solarmind

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
configs/: default.yaml
solarmind/: __init__.py  baselines.py  cli.py  data.py  environment.py  evaluation.py  plotting.py  training.py
tests/: test_solarmind.py
